# mahjongscript

./: README.md  complex_game.json  complex_output_debug.json  complex_test.json  current_game.json  enhanced_game.json  example_game.json  format.sh  mahjong_visualizer.py  pyproject.toml  test_3players.json  test_4players.json  test_game.json  test_game_14_discards.json  test_game_16_tiles.json  test_game_max_tiles.json  test_initial_debug.json  test_output_debug.json  test_players_debug.json  test_visualization_debug.json
