[project]
name = "scriptmahjong"
version = "0.1.0"
description = ""
authors = [
    {name = "bussiere",email = "bussiere@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
